--- a/Tetris/TerorisMainWindow.xaml
+++ b/Tetris/TerorisMainWindow.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Class="WpfApplication1.TerorisMainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Tertis"  Loaded="window_Loaded" Width="328" Height="576" MinWidth="272" MinHeight="545" KeyDown="canvas_KeyDown">
+        Title="Tertis"  Loaded="window_Loaded" Width="328" Height="576" MinWidth="272" MinHeight="545" KeyDown="canvas_KeyDown" KeyUp="Window_KeyUp">
     <StackPanel Margin="10" HorizontalAlignment="Center" VerticalAlignment="Center">
         <Border BorderThickness="2" BorderBrush="Gray" Background="LightGray">
             <Canvas x:Name="game_view" Width="244" Height="484" HorizontalAlignment="Left" VerticalAlignment="Top">
